--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="body-form">
     <img class="form-logo-Castel" src="./assets/Logo-Castel.png">
     <h2 id="form-title">Registra tus datos:</h2>
-    <form id="registroForm">
+    <form id="registroForm" method="post" action="#">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" required><br><br>
         <label for="email">Email:</label>
