--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <img class="form-logo-Castel" src="./assets/Logo-Castel.png">
     <h2 id="form-title">Registra tus datos:</h2>
     <form id="registroForm" method="post" action="#">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" required><br><br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" required><br><br>
-        <label for="phone">Télefono:</label>
-        <input type="number" id="phone" required><br><br>
-        <label for="company">Compañia:</label>
-        <input type="text" id="company"><br><br>
-        <button type="submit">Registrar</button>
-    </form>
+    <label for="nombre">Nombre:</label>
+    <input type="text" id="nombre" name="nombre" required><br><br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required><br><br>
+    <label for="phone">Télefono:</label>
+    <input type="number" id="phone" name="phone" required><br><br>
+    <label for="company">Compañia:</label>
+    <input type="text" id="company" name="company" required><br><br>
+    <button type="submit">Registrar</button>
+</form>
 
     <script src="./index.js"></script>
 </body>
