--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,7 @@
 <head>
     <title>Memorandum</title>
     <link rel="stylesheet" href="./index.css">
+     <link rel="manifest" href="./manifest.json" />
 </head>
 <body>
     <main>
